# personal-growth-sdk

./: .gitignore  README.md  pyproject.toml  ruff.toml
personal_growth_sdk/agenda/schemas/: __init__.py  calendar_schema.py  category_schema.py  component_schema.py
personal_growth_sdk/authorization/constants/: authentication.py  http_headers.py
personal_growth_sdk/authorization/models/: __init__.py  base.py  session.py  user.py
personal_growth_sdk/authorization/models/enums/: __init__.py  role.py
personal_growth_sdk/authorization/schemas/: __init__.py  session_schema.py  session_template_schema.py  user_response_schema.py  user_schema.py
personal_growth_sdk/lib/schemas/: health_check_schema.py
personal_growth_sdk/multi_agent/models/: __init__.py  base.py  chat.py  message.py
personal_growth_sdk/multi_agent/models/enums/: __init__.py  chat_role.py
personal_growth_sdk/multi_agent/schemas/: __init__.py  chat_schema.py  chat_template_schema.py  message_schema.py  message_template_schema.py
