[tool.poetry]
name = "personal-growth-sdk"
version = "0.1.0"
description = ""
authors = ["NeZlox <cnegovek@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
advanced-alchemy = "^0"
litestar = "^2"
msgspec = "^0.19"
ruff = "^0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
