[tool.poetry]
name = "personal-growth-sdk"
version = "0.1.0"
description = ""
authors = ["NeZlox <cnegovek@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]

# Core Python version requirement
python = "^3.12"

# Database/ORM dependencies
advanced-alchemy = "^0"

# Web framework dependencies
litestar = "^2"
multidict = "6.2.0"

# Serialization/validation
msgspec = "^0.19"

# Development tools
ruff = "^0.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
